# azs_local_server_cxx

./: .gitignore  CMakeLists.txt  README.md  log.txt  main.cpp
azs_site/public/public/old/: settings_azs.html  settings_db_error.html
azs_site/public/public/old/css/: main.css
azs_site/src/components/pages/settings/: LeftBottomPart.vue
azs_site/src/plugins/router/: routes.ts
azs_site/src/services/api/settings/: delete-all.ts  get-all.ts  set-all.ts
azs_site/src/services/providers/: api.ts
include/: azs.h  controller.h  core.h  local_data.h  model.h  users_controller.h  view.h  web_tehnology.h
src/: azs.cpp  controller.cpp  core.cpp  local_data.cpp  model.cpp  users_controller.cpp  view.cpp  web_tehnology.cpp
